examples/tactics/neg/LemmaArgs.fst.hints
[
  "}‘¦ωνδ“1ϊ±ƒ®’",
  [
    [
      "LemmaArgs.lemma_example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query", "assumption_Prims.HasEq_int",
        "refinement_interpretation_LemmaArgs_Tm_refine_f0496eb03f3fb51b5e4ca0d53ea58c01"
      ],
      0,
      "222ade01329fe2bf04ea9be30e7a7b4d"
    ],
    [
      "LemmaArgs.example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query",
        "FStar.Tactics.Types_pretyping_44d92714caae41c1068a904c983c4672",
        "Prims_pretyping_f8666440faa91836cc5a13998af863fc",
        "assumption_Prims.HasEq_int",
        "data_elim_FStar.Tactics.Result.Failed",
        "data_typing_intro_FStar.Tactics.Result.Failed@tok",
        "fuel_guarded_inversion_FStar.Pervasives.Native.tuple2",
        "fuel_guarded_inversion_FStar.Tactics.Result.__result",
        "function_token_typing_Prims.unit", "unit_typing"
      ],
      0,
      "4feb1d428a4cde0145e2d3d1b12102ff"
    ],
    [
      "LemmaArgs.lemma_example1",
      2,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "d61d25d42a31ffc51caa65f4ee3d4e04"
    ]
  ]
]